fixing alert message layout bug

--- a/src/containers/Contact/index.css
+++ b/src/containers/Contact/index.css
@@ -11,12 +11,17 @@
     rgb(33 23 61)
   );
 }
+@media (min-width: 768px) {
+  .contact-section {
+    height: 85vh;
+  }
+}
 
 .contact-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 6rem;
-  place-items: center;
+  /* place-items: center; */
   max-width: 90rem;
   margin: 0 auto;
 }
@@ -85,6 +90,8 @@
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
+  transition-property: transform;
+  transition-duration: 0.5s ease;
 }
 .contact-form form input:hover {
   box-shadow: 0px 1px 8px var(--primary-color);
@@ -100,4 +107,7 @@
 }
 .contact-form form button:hover {
   box-shadow: 0px 1px 8px var(--primary-color);
+}
+.contact-form form button:active {
+  transform: scale(1.05);
 }
